[package]
name = "rustpill"
version = "0.1.0"
authors = ["Mikhail Perov <bthkn@icloud.com>"]
edition = "2018"
description = "Rust STM32 hello world"

[dependencies]
cortex-m = "0.7.2"
cortex-m-rt = "0.6.13"
cortex-m-semihosting = "0.3.7"
embedded-hal = "0.2.4"
nb = "1.0.0"
panic-halt = "0.2.0"

[dependencies.stm32f1xx-hal]
version = "0.7.0"
features = ["rt", "stm32f103", "medium"]